[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/RectangleSelection.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]

[node name="Main" type="Control"]
script = ExtResource( 2 )

[node name="RectangleSelection" parent="." instance=ExtResource( 1 )]

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_left = 75.0
margin_top = 187.0
margin_right = 710.0
margin_bottom = 644.0
resizable = true
access = 2
filters = PoolStringArray( "*.png ; PNG Images" )
current_dir = "/"
current_file = "circles_program.png"
current_path = "/circles_program.png"

[node name="DebugFileDialog" type="FileDialog" parent="."]
margin_left = 75.0
margin_top = 187.0
margin_right = 710.0
margin_bottom = 644.0
window_title = "Open a File"
resizable = true
mode = 0
show_hidden_files = true

[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
